app/assets/stylesheets/components/navbar.scss
// NAV BAR
.nav-bar-header {
  position: sticky;
  top: 0;
  background-color: white;
  border-bottom: 1px solid #e4e4e4;
  font-family: "Circular", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.nav-bar-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 81px;
  width: 100vw;
  margin: auto;
  vertical-align: middle;
}

.nav-bar-left {
  min-width: 700px;
  display: flex;
}

.nav-bar-logo {
  vertical-align: middle;
  display: flex;
  align-items: center;
}

.svg-container {
  position: relative;
  text-align: center;
  text-decoration: none;
  -webkit-transition: 0.25s color;
  -moz-transition: 0.25s color;
  transition: 0.25s color;
  vertical-align: middle;
  white-space: nowrap;
}

.hero-logo {
  height: 34px;
  width: 34px;
  background-image: image_url(hero);
  background-position: center;
  background-repeat: no-repeat;
  box-sizing: border-box;
  background-size: 34px 34px;
  padding: 24px;
}


// SEARCH BAR
.search-bar-container {
  width: 460px;
  height: 48px;
  display: flex;
  align-self: center;
  vertical-align: middle;
  border: 1px solid #ebebeb;
  border-radius: 4px;
  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
  transition: box-shadow 200ms ease-in 0s;
  transition: width 200ms ease-in 0s;
}

.search-icon {
  height: 26px;
  width: 26px;
  background-image: image_url(search_icon);
  background-repeat: no-repeat;
  background-position: center;
  box-sizing: border-box;
  background-size: 26px 26px;
  position: relative;
  justify-content: flex-start;
  align-self: center;
  padding-left: 5px;
  margin: 0 7px;
}

.search-bar {
  position: relative;
  height: 48px;
  width: 100%;
  font-size: 17px;
  font-weight: 800;
  font-size: 17px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.search-bar-container:hover {
  box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 4px 12px rgba(26, 26, 29, 0.08);
}

.search-bar-container:focus-within {
  width: 600px;
}

// NAV LINKS
.nav-bar-right {
  justify-content: flex-end;
  vertical-align: middle;
}

.nav-bar-right ul {
  box-sizing: border-box;
  height: 80px;
  display: flex;
}

.nav-bar-right li {
  padding: 0 15px;
}

.nav-bar-right button {
  height: 80px;
  padding: 5px;
}

.nav-bar-right li:hover {
  border-bottom: 2px solid black;
}

